added some semantic tags

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
     <div class="container">
-        <div class="header">
+        <header class="header">
             <p class="circle"></p>
             <nav class="Nav">link1 link2 link3 link4</nav>
-        </div>
+        </header>
 
-        <div class="body">
+        <main class="body">
             <div class="plan_item1">
                 <p class="circle"></p>
                 <p>Plan1</p>
@@ -39,11 +39,11 @@
                 <span><P>This is plan 3 pay 50$ to get it</P></span>
                 <button class="button-17">Pruchase</button>
             </div>
-        </div>
+        </main>
 
-        <div class="footer">
+        <footer class="footer">
             <p class="circle"></p>
-        </div>
+        </footer>
     </div>
 
 </body>
